...
    "action_settings": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
          }
        },
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Ayarlar"
...
    "player_subtitles": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Subtitles"
          }
        },
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Altyazı"
...
